# fake_spectra

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  introduction.html  main.py  objects.inv  pyproject.toml  search.html  searchindex.js  structure.html  test.py  ui.html
.doctrees/: environment.pickle  index.doctree  introduction.doctree  structure.doctree  ui.doctree
.github/workflows/: fake_spectra.yml
_sources/: index.rst.txt  structure.rst.txt
data_gen/: chi_e.py  get_sine.py  plot_interactive.py
docs/: A_PAGE.md  README_copy.md  conf.py  index.md  introduction.rst  ui.rst
lineshapes/: background.py  modulations.py  pdfs.py  sawteeth.py
src/fake_spectra/process/: find_e0.py  make_bkg.py
src/fake_spectra/ui/: main_window.py
src/fake_spectra/utils/: background.py  weird_gaus.py
src/process/: make_bkg.py
src/ui/: main_window.py  plotter.py
src/utils/: modulations.py  pdfs.py
