[project]
name = "fake-data"
version = "0.1.0"
description = "A play around to make some fake xas-like signal."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pyside6>=6.10.1",
    "scipy>=1.16.3",
    "xraydb>=4.5.8",
    "xraylarch>=2025.3.0",
]
