[project]
name = "fake_spectra"
version = "0.1.0"
description = "A play around to make some fake xas-like signal."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "myst-parser>=5.0.0",
    "numpy>=2.4.0",
    "pydata-sphinx-theme>=0.16.1",
    "pyside6>=6.10.1",
    "scipy>=1.16.3",
    "sphinx>=9.1.0",
    "xraydb>=4.5.8",
    "xraylarch>=2025.3.0",
]